[gd_scene load_steps=7 format=3 uid="uid://co7xxdhyq4c2t"]

[ext_resource type="PackedScene" uid="uid://ywk37ko3ue05" path="res://UI/WindowUI/WindowUI.tscn" id="1_jstkg"]
[ext_resource type="Script" path="res://Scenes/OSRoot/parts/OS/Apps/EmailApp/email_app.gd" id="1_wtx1q"]
[ext_resource type="PackedScene" uid="uid://btxy5mypwrlao" path="res://Scenes/OSRoot/parts/OS/Apps/EmailApp/parts/EmailComponent.tscn" id="3_0i4ns"]
[ext_resource type="PackedScene" uid="uid://528j86gp5aj2" path="res://UI/WindowUI/Loading/Loading.tscn" id="3_gbgu8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f4qil"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_623hu"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 2
border_color = Color(0, 0.964706, 0.278431, 1)

[node name="EmailApp" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_f4qil")
script = ExtResource("1_wtx1q")

[node name="WindowUI" parent="." instance=ExtResource("1_jstkg")]
custom_minimum_size = Vector2(800, 600)
layout_mode = 2
enable_close_btn = true
enable_max_btn = true
window_label = "Email"
window_size = Vector2(800, 600)
header_icon = 5

[node name="Header" parent="WindowUI/MarginContainer/VBoxContainer" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_623hu")
enable_max_btn = true
enable_close_btn = true
window_label = "Email"

[node name="LoadingComponent" parent="WindowUI/MarginContainer/VBoxContainer/Body/MarginContainer" index="0" instance=ExtResource("3_gbgu8")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
loading_text = "Loadinge Emails..."

[node name="EmailComponent" parent="WindowUI/MarginContainer/VBoxContainer/Body/MarginContainer" index="1" instance=ExtResource("3_0i4ns")]
visible = false
layout_mode = 2

[editable path="WindowUI"]
